[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
axum = "0.6.1"

diesel = { version = "2.0.0", features = ["postgres"] }
diesel-async = "0.2.0"
