[package]
name = "spherical_go_game_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
itertools = "0.10.3"

serde = { version = "1.0.137", features = ["derive"], optional = true}
serde_json = { version = "1.0.81", optional = true }

[features]
json = ["dep:serde", "dep:serde_json"]
