[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
axum = "0.6.1"

serde = { version = "1.0.152", features = [ "derive" ] }

sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }

thiserror = "1.0.38"

uuid = { version = "1.2.2", features = ["serde", "v4"] }

entity = {path="src/common/db/entity"}
migration = {path="src/common/db/migration"}
