[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
axum = "0.6.1"
tower-http = { version = "0.3.5", features = ["cors"], default_features = false }

serde = { version = "1.0.152", features = [ "derive" ] }

sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "postgres-array" ] }

thiserror = "1.0.38"

uuid = { version = "1.2.2", features = ["serde", "v4"] }

entity = {path="./libs/entity"}
migration = {path="./libs/migration"}
spherical_go_game_lib = {path="../gamelib"}

[dev-dependencies]
axum-test-helper = "0.2.0"
serde_json = "1.0.91"
