[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }

serde = { version = "1.0.152", features = [ "derive" ] }

spherical_go_game_lib = {path="../../../gamelib"}

[dependencies.sea-orm-migration]
version = "^0.10.0"
features = [ "runtime-tokio-rustls", "sqlx-postgres" ]
